--- a/css/about.css
+++ b/css/about.css
@@ -1,5 +1,6 @@
 .quote {
- background-color: whitesmoke;
+ background-color:#233237;
+ color: whitesmoke;
  font-size: 30px;
  font-family: fantasy;
 }
