--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,4 @@
-.jumbotron{
+.homeheader{
     background: url(../Assets/this\ is\ my\ background\ portfolio.jpg) center center;
     background-size: cover;
     height: 65vh;
