--- a/css/projects.css
+++ b/css/projects.css
@@ -1,11 +1,12 @@
 .projects {
-    height: 600px;
-    width: 600px;
-    border: 1px solid white;
+    height: 400px;
+    display: flex;
+    justify-content: space-evenly;
 }
 
-.cssCreature img{
-    height: 325px;
-    width: 325px;
-   
+.projects img{
+   border-radius: 20px;
+   border: 2px  black;
+   height: 300px;
+   width: 400px;
 }
